--- a/assets/styles/mobile.css
+++ b/assets/styles/mobile.css
@@ -647,6 +647,124 @@ body.mobile-body {
   border: none;
 }
 
+.hidden-checkbox {
+  display: none !important;
+}
+
+.category-filter-offcanvas {
+  min-height: 28.75rem;
+  border-top-left-radius: 1.5rem;
+  border-top-right-radius: 1.5rem;
+  border-top: none;
+  padding-bottom: 1.875rem;
+}
+.category-filter-offcanvas .offcanvas-handle {
+  width: 5rem;
+  height: 0.3125rem;
+  background-color: #cccccc;
+  border-radius: 0.3125rem;
+  margin: 0.625rem auto 1rem;
+  flex-shrink: 0;
+  cursor: pointer;
+}
+.category-filter-offcanvas .offcanvas-header {
+  padding: 0.625rem 1.5rem 1.125rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.category-filter-offcanvas .offcanvas-header .offcanvas-title {
+  font-size: 1.125rem;
+  font-weight: 700;
+  color: #444444;
+}
+.category-filter-offcanvas .offcanvas-header .btn-close-custom {
+  background: none;
+  border: none;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.category-filter-offcanvas .offcanvas-body {
+  padding: 0 1.5rem 0rem;
+}
+.category-filter-offcanvas .select-all-area {
+  text-align: left;
+  padding: 0.625rem 0;
+}
+.category-filter-offcanvas .select-all-area custom-checkbox {
+  justify-content: flex-start;
+}
+.category-filter-offcanvas .divider {
+  height: 0.09375rem;
+  background-color: #444444;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+.category-filter-offcanvas .divider.gray {
+  background-color: #eeeeee;
+  margin-bottom: 1.5rem;
+}
+.category-filter-offcanvas .category-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem 0.5rem;
+  margin-bottom: 1.5rem;
+  margin-top: 1.5rem;
+}
+.category-filter-offcanvas .category-grid .category-item-wrap {
+  display: flex;
+  align-items: center;
+}
+.category-filter-offcanvas .category-grid .category-item-wrap custom-checkbox {
+  width: 100%;
+}
+.category-filter-offcanvas .category-grid .category-item-wrap custom-checkbox .custom-checkbox-wrap {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+.category-filter-offcanvas .category-grid .category-item-wrap custom-checkbox .label-text {
+  font-size: 0.875rem;
+  font-weight: 600;
+  color: #444444;
+  margin-left: 0.5rem;
+  display: flex;
+  align-items: center;
+}
+.category-filter-offcanvas .category-grid .category-item-wrap custom-checkbox .count {
+  color: #1f95ff;
+  font-size: 0.875rem;
+  font-weight: 600;
+  margin-left: 0.25rem;
+}
+.category-filter-offcanvas .btn-group-half {
+  display: flex;
+  width: 100%;
+  gap: 0.5rem;
+}
+.category-filter-offcanvas .btn-group-half .btn {
+  flex: 1;
+  height: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1rem;
+  font-weight: 700;
+  border-radius: 0.125rem;
+}
+.category-filter-offcanvas .btn-group-half .btn.btn-gray {
+  background-color: #cccccc;
+  color: #444444;
+  border: none;
+}
+.category-filter-offcanvas .btn-group-half .btn.btn-primary {
+  background-color: #ffe400;
+  color: #444444;
+  border: none;
+}
+
 .product-card {
   background-color: #ffffff;
   width: 100%;
@@ -3841,18 +3959,19 @@ custom-checkbox .custom-checkbox-wrap .label-text {
 .search-result-page .product-grid-2 .product-card.state-dimmed .card-thumb .status-overlay {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   flex-direction: column;
   gap: 0.25rem;
   position: absolute;
-  top: 50%;
+  bottom: 5%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -5%);
   z-index: 15;
   width: 76%;
   color: #ffffff;
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   font-weight: 600;
+  height: 48%;
 }
 .search-result-page .product-grid-2 .product-card.state-dimmed .card-thumb .status-overlay .btn-substitute {
   min-height: 2rem;
@@ -3861,8 +3980,8 @@ custom-checkbox .custom-checkbox-wrap .label-text {
   font-size: 0.8125rem;
   background-color: #ffffff;
   border: 1.5px solid #444444;
-  border-radius: 0.25rem;
-  font-size: 1rem;
+  border-radius: 0.125rem;
+  font-size: 0.875rem;
   color: #444444;
   cursor: pointer;
   font-weight: 600;
