--- a/assets/styles/pc/layout/_header.scss
+++ b/assets/styles/pc/layout/_header.scss
@@ -811,7 +811,7 @@
         .autocomplete-column {
             flex: 1;
             padding: rem(24);
-            padding-bottom: 0;
+            padding-bottom: rem(16);
             display: flex;
             flex-direction: column;
 
