2026-01-13 ## 파일 및 경로 정리 ## ## scss 마이그레이션 전 commit ##

--- a/assets/styles/abstracts/_mixins.scss
+++ b/assets/styles/abstracts/_mixins.scss
@@ -1,3 +1,5 @@
+@use "sass:color";
+
 // Mixins
 // -----------------------------------------------------------------------------
 
@@ -30,7 +32,7 @@
     -webkit-tap-highlight-color: transparent;
 
     &:active {
-        background-color: darken($bg, 10%); // 버튼 배경 darken 적용
+        background-color: color.adjust($bg, $lightness: -10%); // 버튼 배경 darken 대신 color.adjust 적용
     }
 }
 
