--- a/assets/styles/abstracts/_functions.scss
+++ b/assets/styles/abstracts/_functions.scss
@@ -1,9 +1,9 @@
 // 함수
 // -----------------------------------------------------------------------------
 
+@use "sass:math";
+
 // px to rem
-// rem(16) -> 1rem
-// rem(16, 16) -> 1rem
 @function rem($px, $base: 16) {
-    @return #{$px / $base}rem;
+    @return math.div($px, $base) * 1rem;
 }
